find_method_handle_intrinsic leaks Method*

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 20
    • Affects Version/s: 20
    • Component/s: hotspot
    • b14

      If two threads create a Method* via make_method_handle_intrinsic, the first adds it to the hashtable and the second thread leaks the method. Adding the Method* to the deallocate list isn't sufficient because it's also linked in the code cache through a native wrapper.
      If performance is not affected, holding a lock through the process would be the simplest solution, but we should evaluate the performance with this change.

            Assignee:
            Coleen Phillimore
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: