8291736: find_method_handle_intrinsic leaks Method*